--- a/notebooks/recommend_with_llms.ipynb
+++ b/notebooks/recommend_with_llms.ipynb
@@ -262,6 +262,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "```python\n",
+        "# Sample JSON Input\n",
+        "{\n",
+        "  \"restaurant_name\": \"Anand\",\n",
+        "  \"item_list\": [\"chole bhature\", \"gulab jamuns\", \"lassi\"],\n",
+        "  \"cuisine_preference\": \"NOT_AVAILABLE\",\n",
+        "  \"budget_preference\": \"affordable\",\n",
+        "  \"delivery_time_preference\": \"20 minutes\"\n",
+        "}\n",
+        "```\n",
+        "\n",
+        "```python\n",
+        "# Sample Preformatted Output String\n",
+        "I would like to order chole bhature, gulab jamuns, lassi\n",
+        "from restaurants similar to Anand. I prefer having\n",
+        "food from NOT_AVAILABLE cuisine,\n",
+        "my budget preference is affordable and delivery preference\n",
+        "is 20 minutes\n",
+        "```"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
